--- a/Src/Xer.Delegator.nuspec
+++ b/Src/Xer.Delegator.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Xer.Delegator</id>
-    <version>0.2.4</version>
+    <version>0.2.5</version>
     <title>Xer.Delegator</title>
     <authors>jeyjeyemem</authors>
     <owners>jeyjeyemem</owners>
@@ -12,8 +12,8 @@
     <description>A simple delegate-based message handling library.</description>
     <summary>A simple delegate-based message handling library.</summary>
     <releaseNotes>
-      - Improved MultiMessageHandlerResolver performance.
-      - Added public API XML documentation
+      - Added CompositeMessageHandlerResolver.Compose method for easy composition of multiple message handler resolvers.
+      - Moved sync Register overload from IMessageHandlerRegistration to an extension method.
     </releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Delegate Message Handling Library</tags>
