--- a/Tests/Xer.Delegator.Tests/Xer.Delegator.Tests.csproj
+++ b/Tests/Xer.Delegator.Tests/Xer.Delegator.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Src\Xer.Delegator.csproj" />
+    <ProjectReference Include="..\..\Src\Xer.Delegator\Xer.Delegator.csproj" />
   </ItemGroup>
 
 </Project>
